--- a/src/main/resources/templates/employee.html
+++ b/src/main/resources/templates/employee.html
@@ -34,7 +34,7 @@
 					</li>
 				</li>
 				<li>
-					<a  th:href="@{/employees}">Employee</a>
+					<a href="#">Employee</a>
 				</li>
 				<li>
 					<a href="#pageSubmenu" data-toggle="collapse"
@@ -62,20 +62,29 @@
 
 		<div id="content">
 			<div class="container">
-				<h1>Employee Management System</h1>
-				<hr>
-				<h2>Save Employee</h2>
-				
-				<form action="#" th:action="@{/saveEmployee}" th:object="${employee}" method="POST">
-					<input type="text" th:field="*{firstName}" placeholder="First Name" class="form-control mb-4 col-4">
-					<input type="text" th:field="*{lastName}" placeholder="Last Name" class="form-control mb-4 col-4">
-					<input type="text" th:field="*{email}" placeholder="Email" class="form-control mb-4 col-4">
-					
-					<button type="submit" class="btn btn-info col-2">Save Employee</button>
-				</form>
-			</div>
+					<h1>Employee Management System</h1>
+					<p>This application list all of employees.</p>
+					<a th:href="@{/showNewEmployeeForm}" class="btn btn-primary btn-sm mb-3">Add
+						Employee</a>
+					<table class="table table-striped">
+						<tr>
+							<th>First Name</th>
+							<th>Last Name</th>
+							<th>Email</th>
+							<th>Actions</th>
+						</tr>
+						<tr th:each="listEmployee : ${listEmployees}">
+							<td th:text="${listEmployee.firstName}"></td>
+							<td th:text="${listEmployee.lastName}"></td>
+							<td th:text="${listEmployee.email}">0</td>
+							<td>
+								<a th:href="@{/showUpdateEmployeeForm/{id}(id=${listEmployee.id})}" class="btn btn-primary">Update</a>
+								<a th:href="@{/deleteEmployee/{id}(id=${listEmployee.id})}" class="btn btn-primary">Delete</a>
+							</td>
+						</tr>
+					</table>
+				</div>
 		</div>
-
 	</div>
 
 
