--- a/src/main/resources/templates/update_employee.html
+++ b/src/main/resources/templates/update_employee.html
@@ -66,7 +66,7 @@
 				<hr>
 				<h2>Update Employee</h2>
 				
-				<form action="#" th:action="@{/saveEmployee}" th:object="${employee}" method="POST">
+				<form action="#" th:action="@{/save_employee}" th:object="${employee}" method="POST">
 					<input type="hidden" th:field="*{id}" class="form-control mb-4 col-4">
 					<input type="text" th:field="*{firstName}" class="form-control mb-4 col-4">
 					<input type="text" th:field="*{lastName}" class="form-control mb-4 col-4">
