--- a/src/main/resources/templates/update_position.html
+++ b/src/main/resources/templates/update_position.html
@@ -62,14 +62,15 @@
 
 		<div id="content">
 			<div class="container">
-				<h1>Employee Management System</h1>
+				<h1>Position List</h1>
 				<hr>
-				<h2>Save Employee</h2>
+				<h2>Update Position</h2>
 				
-				<form action="#" th:action="@{/save_employee}" th:object="${employee}" method="POST">
-					<input type="text" th:field="*{firstName}" placeholder="First Name" class="form-control mb-4 col-4">
-					<input type="text" th:field="*{lastName}" placeholder="Last Name" class="form-control mb-4 col-4">
-					<input type="text" th:field="*{email}" placeholder="Email" class="form-control mb-4 col-4">
+				<form action="#" th:action="@{/save_position}" th:object="${position}" method="POST">
+					<input type="hidden" th:field="*{id}" class="form-control mb-4 col-4">
+					<input type="text" th:field="*{departmentCode}" class="form-control mb-4 col-4">
+					<input type="text" th:field="*{positionCode}" class="form-control mb-4 col-4">
+					<input type="text" th:field="*{description}" class="form-control mb-4 col-4">
 					
 					<button type="submit" class="btn btn-info col-2">Save Employee</button>
 				</form>
