--- a/src/main/resources/templates/new_department.html
+++ b/src/main/resources/templates/new_department.html
@@ -34,7 +34,7 @@
 					</li>
 				</li>
 				<li>
-					<a  th:href="@{/employees}">Employee</a>
+					<a th:href="@{/employees}">Employee</a>
 				</li>
 				<li>
 					<a href="#pageSubmenu" data-toggle="collapse"
@@ -54,15 +54,24 @@
 					</ul>
 				</li>
 
-				<li><a th:href="@{/generate_report}">Generate Report</a></li>
-				<li><a th:href="@{/admin}">Admin</a></li>
+				<li><a href="#">Generate Report</a></li>
+				<li><a href="#">Admin</a></li>
 			</ul>
 			
 		</nav>
 
 		<div id="content">
 			<div class="container">
-				<h1>Dashboard</h1>
+				<h1>Department List</h1>
+				<hr>
+				<h2>Save Department</h2>
+				
+				<form action="#" th:action="@{/save_department}" th:object="${department}" method="POST">
+					<input type="text" th:field="*{code}" placeholder="Department Code" class="form-control mb-4 col-4">
+					<input type="text" th:field="*{description}" placeholder="Description" class="form-control mb-4 col-4">
+					
+					<button type="submit" class="btn btn-info col-2">Save Department</button>
+				</form>
 			</div>
 		</div>
 
