--- a/src/main/resources/templates/update_employee.html
+++ b/src/main/resources/templates/update_employee.html
@@ -43,19 +43,19 @@
 					</a>
 					<ul class="collapse lisst-unstyled" id="pageSubmenu">
 						<li>
-							<a href="#">Department</a>
+							<a th:href="@{/department}">Department</a>
 						</li>
 						<li>
-							<a href="#">Position</a>
+							<a th:href="@{/position}">Position</a>
 						</li>
 						<li>
-							<a href="#">Employee Status</a>
+							<a th:href="@{/employee_status}">Employee Status</a>
 						</li>
 					</ul>
 				</li>
 
-				<li><a href="#">Generate Report</a></li>
-				<li><a href="#">Admin</a></li>
+				<li><a th:href="@{/generate_report}">Generate Report</a></li>
+				<li><a th:href="@{/admin}">Admin</a></li>
 			</ul>
 			
 		</nav>
