--- a/src/main/resources/templates/new_department.html
+++ b/src/main/resources/templates/new_department.html
@@ -54,8 +54,8 @@
 					</ul>
 				</li>
 
-				<li><a href="#">Generate Report</a></li>
-				<li><a href="#">Admin</a></li>
+				<li><a th:href="@{/generate_report}">Generate Report</a></li>
+				<li><a th:href="@{/admin}">Admin</a></li>
 			</ul>
 			
 		</nav>
