--- a/src/main/resources/templates/employee_status.html
+++ b/src/main/resources/templates/employee_status.html
@@ -62,24 +62,22 @@
 
 		<div id="content">
 			<div class="container">
-					<h1>Employee Management System</h1>
-					<p>This application list all of employees.</p>
-					<a th:href="@{/new_employee}" class="btn btn-primary btn-sm mb-3">Add
-						Employee</a>
+					<h1>Employee Status List</h1>
+					<p></p>
+					<a th:href="@{/new_employee_status}" class="btn btn-primary btn-sm mb-3">Add
+						Employee Status</a>
 					<table class="table table-striped">
 						<tr>
-							<th>First Name</th>
-							<th>Last Name</th>
-							<th>Email</th>
+							<th>Code</th>
+							<th>Description</th>
 							<th>Actions</th>
 						</tr>
-						<tr th:each="listEmployee : ${listEmployees}">
-							<td th:text="${listEmployee.firstName}"></td>
-							<td th:text="${listEmployee.lastName}"></td>
-							<td th:text="${listEmployee.email}">0</td>
+						<tr th:each="employeeStatus : ${listEmployeeStatus}">
+							<td th:text="${employeeStatus.code}"></td>
+							<td th:text="${employeeStatus.description}"></td>
 							<td>
-								<a th:href="@{/update_employee/{id}(id=${listEmployee.id})}" class="btn btn-primary">Update</a>
-								<a th:href="@{/delete_employee/{id}(id=${listEmployee.id})}" class="btn btn-primary">Delete</a>
+								<a th:href="@{/update_employee_status/{id}(id=${employeeStatus.id})}" class="btn btn-primary">Update</a>
+								<a th:href="@{/delete_employee_status/{id}(id=${employeeStatus.id})}" class="btn btn-primary">Delete</a>
 							</td>
 						</tr>
 					</table>
